Re-work tag filtering for multiple types of hardware

--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@ layout: default
 
 {% capture tags %}{% for doc in site.docs %}{% for tag in doc.tags %}{{ tag }}|{% endfor %}{% endfor %}{% endcapture %}
 {% assign taghash = tags | split:'|' | sort | tag_hash %}
+{% capture hws %}{% for doc in site.docs %}{% for hardware in doc.hardware %}{{ hardware }}|{% endfor %}{% endfor %}{% endcapture %}
+{% assign hwhash = hws | split:'|' | sort | tag_hash %}
 
   <div class="centre">
     <div id="sidebar">
-      <div class="filter" id="hw-filter"><h3>Filter by Version</h3><a data-filter="hw-v1" href="javascript:void(0);">v1</a> <a data-filter="hw-v2" href="javascript:void(0);">v2</a></div>
+      <div class="filter" id="hw-filter">
+        <h3>Filter by Hardware</h3>
+        {% for hw in hwhash %}
+        <a href="javascript:void(0);" data-filter="{{ hw[0] | downcase }}">{{ hw[0] }}</a>
+        {% endfor %}
+      </div>
       <div class="filter" id="type-filter"><h3>Filter by Type</h3><a data-filter="type-instruction" href="javascript:void(0);">Instructions</a> <a data-filter="type-challenge" href="javascript:void(0);">Challenges</a> <a data-filter="type-lesson-plan" href="javascript:void(0);">Lesson plans</a> <a data-filter="type-documentation" href="javascript:void(0);">Documentation</a> <a data-filter="type-troubleshooting" href="javascript:void(0);">Troubleshooting</a></div>
       <div class="filter" id="level-filter"><h3>Filter by Skill Level</h3><a data-filter="level-core" href="javascript:void(0);">Core</a> <a data-filter="level-beginner" href="javascript:void(0);">Beginner</a> <a data-filter="level-intermediate" href="javascript:void(0);">Intermediate</a> <a data-filter="level-advanced" href="javascript:void(0);">Advanced</a></div>
       <div class="filter" id="tag-filter">
@@ -18,20 +25,7 @@ layout: default
       </div>
     </div>
     <div id="docs">
-      {% assign v2 = (site.docs | where: "hardware" , "v2" %}
-      {% for doc in v2 %}
-        {% if doc.frontpage != false %}
-          {% include doc.html doc=doc %}
-        {% endif %}
-      {% endfor %}
-      {% assign all = (site.docs | where: "hardware" , "all") %}
-      {% for doc in all %}
-        {% if doc.frontpage != false %}
-          {% include doc.html doc=doc %}
-        {% endif %}
-      {% endfor %}
-      {% assign v1 = (site.docs | where: "hardware" , "v1") %}
-      {% for doc in v1 %}
+      {% for doc in site.docs %}
         {% if doc.frontpage != false %}
           {% include doc.html doc=doc %}
         {% endif %}
