--- a/_docs/calibrating-your-mirobot.html
+++ b/_docs/calibrating-your-mirobot.html
@@ -5,10 +5,9 @@ layout: doc
 tags:
   - Calibrating
   - Using
-hardware: v2
+hardware: mirobot-v2
 type: instruction
 level: intermediate
-frontpage: false
 ---
 <style>
 .cal{
