Tag some of the docs for v3

--- a/_docs/calibrating-your-mirobot.html
+++ b/_docs/calibrating-your-mirobot.html
@@ -5,7 +5,9 @@ layout: doc
 tags:
   - Calibrating
   - Using
-hardware: mirobot-v2
+hardware:
+  - mirobot-v2
+  - mirobot-v3
 type: instruction
 level: intermediate
 ---
