--- a/_docs/flipping-motors.html
+++ b/_docs/flipping-motors.html
@@ -4,7 +4,9 @@ summary: Flip the motors to fix an issue with Mirobot going backwards
 layout: doc
 tags:
   - Fix
-hardware: mirobot-v2
+hardware:
+  - mirobot-v2
+  - mirobot-v3
 type: instruction
 level: intermediate
 fontpage: false
